Update license to CC BY-SA 4.0 and clarify GFDL 1.3 license
Bug: T319064
Change-Id: Idf096501456ebb30cc2cee89c3bb0505037e4ec4

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -439,7 +439,7 @@
 	"growthexperiments-addlink-summary-title": "Summary",
 	"growthexperiments-addlink-summary-column-header-suggestion": "Suggestion",
 	"growthexperiments-addlink-summary-column-header-linked": "Linked?",
-	"growthexperiments-addlink-summary-copyrightwarning": "By publishing changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/3.0/ CC BY-SA 3.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL] licenses.",
+	"growthexperiments-addlink-summary-copyrightwarning": "By publishing changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/4.0/ CC BY-SA 4.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL 1.3] licenses.",
 	"growthexperiments-addlink-summary-summary": "Link suggestions feature: $1 {{PLURAL:$1|link|links}} added.",
 	"growthexperiments-addlink-skip-title": "{{GENDER:|You’ve}} skipped all suggestions for this article.",
 	"growthexperiments-addlink-skip-body": "Are you sure {{GENDER:|you}} don’t want to accept or reject any suggestions?",
@@ -550,7 +550,7 @@
 	"growthexperiments-structuredtask-user-error-login-cta": "Log in",
 	"growthexperiments-structuredtask-anonuser": "User is no longer logged in.",
 	"growthexperiments-addimage-summary-label": "Summary",
-	"growthexperiments-addimage-summary-copyrightwarning": "By saving changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/3.0/ CC BY-SA 3.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL] licenses.",
+	"growthexperiments-addimage-summary-copyrightwarning": "By saving changes, {{GENDER:|you}} agree to the [https://foundation.wikimedia.org/wiki/Terms_of_Use Terms of Use] and agree to release your contribution under the [https://creativecommons.org/licenses/by-sa/4.0/ CC BY-SA 4.0] and [https://www.gnu.org/licenses/fdl-1.3.html GFDL 1.3] licenses.",
 	"growthexperiments-addimage-summary-summary": "Image suggestions feature: $1 {{PLURAL:$1|image|images}} added.",
 	"growthexperiments-addimage-reason-wikipedia": "Used in the same article in $1 {{PLURAL:$1|other language|other languages}}.",
 	"growthexperiments-addimage-reason-wikipedia-languages": "Used in the same article in $1 {{PLURAL:$1|other language|other languages}}: $2.",
