Mentor dashboard: Deprecate ApiSetMentorStatus
Why:

Originally, the mentor list was stored on a regular wiki page,
where it is not easily possible to store any other datapoints
than the mentor's username / message. For that reason, the away
timestamp was added to a preference, rather than the list of mentors,
where it would naturally belong to.

We introduced the structured list of mentors, where we can store
any information necessary for a mentor. While the actual mentor status
is not stored there yet (for no real reason; it should eventually change),
the structured mentor list brought a centralized API to manage the list
of mentors, action=growthmanagementorlist.

We should migrate away from action=growthsetmentorstatus and merge
it with the central API, which is what this patch does.

What:

* Add awayTimestampHuman to action=growthmanagementorlist,
  to make it easier to display the until timestamp in
  a human-readable format.
* Migrate to action=growthmanagementorlist in the Mentor tools
  Mentor dashboard module.
* Implement the "too long away" business case in MentorStatusManager
  rather than on the API level, as there is no reason why internal
  callers should set longer away timestamps than users can.
* Mark action=growthsetmentorstatus as deprecated.

Bug: T321503
Change-Id: Iad835a9c48e8fce18f4710680258683566f0a5b8

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -73,8 +73,7 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-text": "If {{GENDER:|you}} cannot mentor for a specific time period (more than 1 week) {{GENDER:|you}} can set {{GENDER:|yourself}} as away. During that period another mentor will receive questions from {{GENDER:|your}} mentees.",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for": "You’ll be gone for:",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-away-for-label": "days",
-	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-badinteger": "Input in \"{{GENDER:|You'll}} be gone for\" is not an integer. Please try again.",
-	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-toohigh": "Input in \"{{GENDER:|You'll}} be gone for\" is too high. The maximum number of days a mentor can be away for is 365 (one year).",
+	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-toohigh": "Input in \"{{GENDER:|You'll}} be gone for\" is too high. The maximum number of days a mentor can be away for is $1 (one year).",
 	"growthexperiments-mentor-dashboard-mentor-tools-away-dialog-error-unknown": "Unknown error occurred. Please try again later.",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-active": "Your status was changed to \"Active\".",
 	"growthexperiments-mentor-dashboard-mentor-tools-mentor-changed-to-away": "Your status was changed to \"Away\".",
