--- a/i18n/mentorship/api/en.json
+++ b/i18n/mentorship/api/en.json
@@ -24,6 +24,8 @@
 	"apihelp-growthmanagementorlist-param-message": "Introduction message (use an empty string for the default mentor message)",
 	"apihelp-growthmanagementorlist-param-weight": "Weight",
 	"apihelp-growthmanagementorlist-param-autoassigned": "Is the mentor automatically assigned to newcomers?",
+	"apihelp-growthmanagementorlist-param-isaway": "Is the mentor currently away? Has to be set (defaults to false).",
+	"apihelp-growthmanagementorlist-param-awaytimestamp": "Until when is the mentor away? Maximum is 1 year from today. Ignored unless isaway is true.",
 	"apihelp-growthmanagementorlist-param-summary": "Reason for the change",
 	"apihelp-growthmanagementorlist-param-username": "Username of the mentor affected by the change. If not provided, currently logged in user will be used. Can be only used by privileged users.",
 	"growthexperiments-api-managementors-error-no-away-timestamp": "If isaway is true, then awaytimestamp must be provided.",
