--- a/i18n/mentorship/api/qqq.json
+++ b/i18n/mentorship/api/qqq.json
@@ -26,6 +26,8 @@
 	"apihelp-growthmanagementorlist-param-message": "{{doc-apihelp-param|growthmanagementorlist|message}}",
 	"apihelp-growthmanagementorlist-param-weight": "{{doc-apihelp-param|growthmanagementorlist|weight}}",
 	"apihelp-growthmanagementorlist-param-autoassigned": "{{doc-apihelp-param|growthmanagementorlist|autoassigned}}",
+	"apihelp-growthmanagementorlist-param-isaway": "{{doc-apihelp-param|growthmanagementorlist|isaway}}",
+	"apihelp-growthmanagementorlist-param-awaytimestamp": "{{doc-apihelp-param|growthmanagementorlist|awaytimestamp}}",
 	"apihelp-growthmanagementorlist-param-summary": "{{doc-apihelp-param|growthmanagementorlist|summary}}",
 	"apihelp-growthmanagementorlist-param-username": "{{doc-apihelp-param|growthmanagementorlist|username}}",
 	"growthexperiments-api-managementors-error-no-away-timestamp": "Message to show in API (action=growthmanagementors) if isaway is true, but awaytimestamp is not provided.",
