ApiQueryImageSuggestionData: Do not throw an exception if configuration lacks task
If Community configuration doesn't include an entry for the requested
image suggestion type, it is a user error, not a code error. Return
a custom error message when that is the case.

Bug: T337330
Change-Id: Ife98ebcea450c208b9717850560f24abe6723aa1

--- a/i18n/homepage/api/qqq.json
+++ b/i18n/homepage/api/qqq.json
@@ -17,6 +17,7 @@
 	"apihelp-query+growthimagesuggestiondata-param-tasktype": "{{doc-apihelp-param|growthimagesuggestiondata|tasktype}}",
 	"apihelp-growthinvalidateimagerecommendation-summary": "{{doc-apihelp-summary|growthinvalidateimagerecommendation}}",
 	"apihelp-growthinvalidateimagerecommendation-extended-description": "{{doc-apihelp-extended-description|growthimagesuggestiondata}}",
+	"growthexperiments-homepage-imagesuggestiondata-not-in-config": "Message to show in API response if the requested task is not present in the Community configuration\n\nParameters:\n* $1 - requested task type's ID",
 	"apihelp-growthinvalidateimagerecommendation-param-tasktype": "{{doc-apihelp-param|growthinvalidateimagerecommendation|tasktype}}",
 	"apihelp-growthinvalidateimagerecommendation-param-title": "{{doc-apihelp-param|growthinvalidateimagerecommendation|title}}",
 	"apihelp-growthinvalidateimagerecommendation-param-filename": "{{doc-apihelp-param|growthinvalidateimagerecommendation|filename}}",
