Personalized praise: Add Reverted edits card
Personalized praise (in Mentor dashboard) uses
UserImpact to display information about potentially
praiseworthy mentees. The mentors want revert count
to be displayed as well. To implement this, make
UserImpact contain the reverted count as well.

The Reverted edits card is supposed to only appear
within the Mentor dashboard (not on Special:Homepage
or Special:Impact). I've added its messages into
i18n/homepage, as it makes more sense to have all
UserImpact-related messages within a single directory,
rather than have a single one in i18n/mentorship.

Bug: T337510
Change-Id: Ieb0e4abca93a7ae69a10d3a64e8ff6b07d8f79cc

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -73,6 +73,7 @@
 	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label": "Views on articles {{GENDER:$1|you've}} edited",
 	"growthexperiments-homepage-impact-edited-articles-trend-chart-count-label-third-person": "Views on articles edited",
 	"growthexperiments-homepage-impact-scores-edit-count": "Total edits",
+	"growthexperiments-homepage-impact-scores-reverted-edit-count": "Reverted edits",
 	"growthexperiments-homepage-impact-scores-thanks-count": "Thanks received",
 	"growthexperiments-homepage-impact-scores-over-limit": "999+",
 	"growthexperiments-homepage-impact-scores-thanks-info-label": "More information about how thanks works",
