Personalized praise: Add the info icon
Bug: T342453
Change-Id: I95f49e4d58c0a83a0a84504e020761c2913627fd

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -47,7 +47,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-headline": "No recently active mentees found",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-no-mentees-text": "The mentor dashboard only shows recently active mentees. More information can be displayed via the info icon. If {{GENDER:|you}} recently enrolled into mentorship, {{GENDER:|you}} might have no mentees assigned yet.",
 	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-headline": "No mentees found",
-	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change your filters to find mentees.",
+	"growthexperiments-mentor-dashboard-mentee-overview-empty-screen-filters-text": "Change {{GENDER:|your}} filters to find mentees.",
 	"growthexperiments-mentor-dashboard-mentee-overview-recent-edits-headline": "Recent changes by {{GENDER:|your}} mentees",
 	"growthexperiments-mentor-dashboard-mentee-overview-recent-edits-text": "{{GENDER:|You}} can view the edits made by all {{GENDER:|your}} mentees by visiting this [$1 filtered view of Recent Changes].",
 	"growthexperiments-mentor-dashboard-resources-headline": "Resources",
@@ -118,6 +118,11 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing, and I just wanted to take a moment to thank you and to say that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
 	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send praise",
 	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors increase editor retention.",
+	"growthexperiments-mentor-dashboard-personalized-praise-info-icon-label": "More information about the Personalized praise module.",
+	"growthexperiments-mentor-dashboard-personalized-praise-info-headline": "More information",
+	"growthexperiments-mentor-dashboard-personalized-praise-info-par1": "Send your mentee an encouraging message on their Talk page.",
+	"growthexperiments-mentor-dashboard-personalized-praise-info-par2": "Newcomer’s editing activity often increases when they receive thanks or other positive messages about their work from an experienced editor or mentor.",
+	"growthexperiments-mentor-dashboard-personalized-praise-info-par3": "{{GENDER:|You}} may personalise your default message in settings.",
 	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "<strong>Metric</strong>: $1 {{PLURAL:$1|edit|edits}} in the last $2 {{PLURAL:$2|day|days}}. Customise these figures in settings.",
 	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Praise-worthy mentees will be shown here.",
 	"growthexperiments-mentor-dashboard-personalized-praise-talk-topics": "$1 talk topics",
