Structured mentor list: Use meaningful edit summaries
Why:
It is currently hard to understand what changes purely
by checking GrowthMentors.json's history, as the edit summaries
do not make it clear which action was taken by the user.

What:
Prefix the user-submitted reason by an informative prefix,
which makes it clear what the user actually did. Make use
of MW's autocomments, to avoid the need to pass around context
or build the comment on the UI level in all places where mentorship
related changes are needed. The autocomment is returned in content
language, as it might include user-provided strings (which presumably
are in content language).

Do the prefixing in StructuredMentorWriter (by calling
a newly-introduced MentorshipSummaryCreator class), so all
internal callers of mentorship features benefit from the summaries
without having to build them on their own.

Bug: T322115
Depends-On: I85f47d71f7f444f1c5b7bfea7897e4187d20d15c
Change-Id: I66008f7bfbf73b64c3c1c1a00131150dcef7852f

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -205,6 +205,18 @@
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Reason for removing the mentor",
 	"growthexperiments-manage-mentors-remove-mentor-success": "User [[User:$1|$1]] is no longer a {{GENDER:$1|mentor}}.",
 	"growthexperiments-manage-mentors-return-back": "You can [[Special:ManageMentors|return back]] to the list of mentors.",
+	"growthexperiments-manage-mentors-summary-add-admin-no-reason": "Adding $1 as a mentor",
+	"growthexperiments-manage-mentors-summary-add-admin-with-reason": "Adding $1 as a mentor: $2",
+	"growthexperiments-manage-mentors-summary-add-self-no-reason": "Adding myself as a mentor",
+	"growthexperiments-manage-mentors-summary-add-self-with-reason": "Adding myself as a mentor: $2",
+	"growthexperiments-manage-mentors-summary-change-admin-no-reason": "Changing $1's mentorship options",
+	"growthexperiments-manage-mentors-summary-change-admin-with-reason": "Changing $1's mentorship options: $2",
+	"growthexperiments-manage-mentors-summary-change-self-no-reason": "Changing my mentorship options",
+	"growthexperiments-manage-mentors-summary-change-self-with-reason": "Changing my mentorship options: $2",
+	"growthexperiments-manage-mentors-summary-remove-admin-no-reason": "Removing $1 as a mentor",
+	"growthexperiments-manage-mentors-summary-remove-admin-with-reason": "Removing $1 as a mentor: $2",
+	"growthexperiments-manage-mentors-summary-remove-self-no-reason": "Resigning as a mentor",
+	"growthexperiments-manage-mentors-summary-remove-self-with-reason": "Resigning as a mentor: $2",
 	"growthexperiments-mentorship-enrollasmentor-title": "Enroll as a {{GENDER:|mentor}}",
 	"growthexperiments-mentorship-enrollasmentor-pretext": "Thank {{GENDER:|you}} for volunteering as a {{SITENAME}} {{GENDER:|mentor}}. {{GENDER:|You}} can enroll as a mentor by filling out this form.",
 	"growthexperiments-mentorship-enrollasmentor-form-message": "Introduction message",
