--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -212,6 +212,18 @@
 	"growthexperiments-manage-mentors-remove-mentor-reason": "Label in mentor removal form in Special:ManageMentors",
 	"growthexperiments-manage-mentors-remove-mentor-success": "Success message shown after a mentor is successfully removed via Special:ManageMentors.",
 	"growthexperiments-manage-mentors-return-back": "Link back to Special:ManageMentors. Shown after a write action (eg. removal of a mentor) is successfully submitted via Special:ManageMentors.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-manage-mentors-summary-add-admin-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is added by an admin\n\nParameters:\n* $1 - mentor's name",
+	"growthexperiments-manage-mentors-summary-add-admin-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is added by an admin\n\nParameters:\n* $1 - mentor's name\n* $2 - reason provided by the admin",
+	"growthexperiments-manage-mentors-summary-add-self-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user enrolls as a mentor\n\nParameters:\n* $1 - mentor's name (unused)",
+	"growthexperiments-manage-mentors-summary-add-self-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user enrolls as a mentor\n\nParameters:\n* $1 - mentor's name (unused)\n* $2 - reason",
+	"growthexperiments-manage-mentors-summary-change-admin-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when mentor's options are changed by an admin\n\nParameters:\n* $1 - mentor's name",
+	"growthexperiments-manage-mentors-summary-change-admin-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when mentor's options are changed by an admin\n\nParameters:\n* $1 - mentor's name\n* $2 - reason provided by the admin",
+	"growthexperiments-manage-mentors-summary-change-self-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user changes their mentorship options\n\nParameters:\n* $1 - mentor's name (unused)",
+	"growthexperiments-manage-mentors-summary-change-self-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user changes their mentorship options\n\nParameters:\n* $1 - mentor's name (unused)\n* $2 - reason",
+	"growthexperiments-manage-mentors-summary-remove-admin-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is removed by an admin\n\nParameters:\n* $1 - mentor's name",
+	"growthexperiments-manage-mentors-summary-remove-admin-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a mentor is removed by an admin\n\nParameters:\n* $1 - mentor's name\n* $2 - reason provided by the admin",
+	"growthexperiments-manage-mentors-summary-remove-self-no-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user quits as a mentor\n\nParameters:\n* $1 - mentor's name (unused)",
+	"growthexperiments-manage-mentors-summary-remove-self-with-reason": "Edit summary for guided edits of MediaWiki:GrowthMentors.json when a user quits as a mentor\n\nParameters:\n* $1 - mentor's name (unused)\n* $2 - reason",
 	"growthexperiments-mentorship-enrollasmentor-title": "Title for Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentorship-enrollasmentor-pretext": "An introduction message shown in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentorship-enrollasmentor-form-message": "Field label in Special:EnrollAsMentor\n\n{{doc-growthexperiments-mentor-dashboard}}",
