WelcomeSurvey: Update privacy links
Why:
The old link included in the Welcome survey is out of date.
WMF Legal passed recommendations to us for implementation.

The footer (privacy-info) is automatically added to the questions
if omitted by configuration, as it is a Legal-mandated piece
that shouldn't be ommitted. It doesn't make sense to have
to think about it each time we add a survey group.

What:
* Remove sidebar link per WMF Legal and Kirsten
* Stop passing privacy policy link to confirmation messages
  (it is not included in the user-facing message)
* Add a footer to the Welcome survey, to point to the
  survey-specific WMF Privacy statement.

Bug: T343682
Change-Id: I8658a980695641d5586e4e0d7838eee78fc80d1a

--- a/i18n/welcomesurvey/en.json
+++ b/i18n/welcomesurvey/en.json
@@ -9,9 +9,8 @@
 	"welcomesurvey-save-btn": "Finish",
 	"welcomesurvey-skip-btn": "{{GENDER:$1|Skip}} this survey",
 	"welcomesurvey-close-btn": "Close and go back to $1",
-	"welcomesurvey-sidebar-privacy-title": "We value {{GENDER:|your}} privacy",
-	"welcomesurvey-sidebar-privacy-text": "The Wikimedia Foundation will use {{GENDER:$2|your}} answers to help you start editing {{SITENAME}}. $1.",
 	"welcomesurvey-privacy-policy-link-text": "Learn more about data on new editors",
+	"welcomesurvey-privacy-footer-text": "The Wikimedia Foundation will use {{GENDER:$1|your}} answers to help you start editing {{SITENAME}}. [$2 Learn more in our privacy statement].",
 	"welcomesurvey-sidebar-editing-title": "Getting started with editing",
 	"welcomesurvey-sidebar-editing-text": "Almost every page can be edited by anyone, and hundreds of changes are made every hour to add content, correct mistakes, and improve readability. The following pages can help if {{GENDER:$1|you’re interested}} in contributing.",
 	"welcomesurvey-sidebar-editing-link1-text": "Tutorial",
