--- a/i18n/welcomesurvey/qqq.json
+++ b/i18n/welcomesurvey/qqq.json
@@ -10,14 +10,13 @@
 	},
 	"welcomesurvey": "Title which appears at the top of a welcome survey users are shown after account sign-up, and shown on all form steps. Should be friendly and welcoming but succinct. Parameters:\n* $1 - Name of the current user. Can be used with GENDER.",
 	"welcomesurvey-save-confirmation-title": "Dialog title after submitting a welcome survey form.",
-	"welcomesurvey-save-confirmation-text": "Short text after the section heading “Thanks! Your responses have been saved” shown to users after they complete a welcome survey after signing up for a Wikipedia account. Parameters:\n* $1 - Link to the privacy policy.",
+	"welcomesurvey-save-confirmation-text": "Short text after the section heading “Thanks! Your responses have been saved” shown to users after they complete a welcome survey after signing up for a Wikipedia account.",
 	"welcomesurvey-subtitle": "Message conveying to the user the benefit of filling in a short welcome survey.  Should not imply that anything will change about the user’s experience based on their responses.",
 	"welcomesurvey-save-btn": "Text on a button to submit answers to a welcome survey that is shown to users after they sign up for a new Wikipedia account.",
 	"welcomesurvey-skip-btn": "Button to exit the form and return to where they were prior to account creation. The user is not able to return and complete the form later, so the call to action should clearly indicate this is a permanent skip. It should also be clear that this is for skipping the whole survey, not just one question.\n\nParameters:\n* $1 - Name of the current user (for use with GENDER).",
 	"welcomesurvey-close-btn": "Text of the close button on the survey confirmation page. Users will be returned to whatever page they were on prior to sign-up and being shown this survey. Parameters:\n* $1 - Name of the page the user will be redirected to when they click the button.",
-	"welcomesurvey-sidebar-privacy-title": "Section heading appearing in a welcome survey before some more information and a link to a privacy statement about how the survey responses.",
-	"welcomesurvey-sidebar-privacy-text": "Short paragraph in a welcome survey linking to a privacy statement where survey respondents can find out more information about how their responses will be used. Parameters:\n* $1 - Link to the privacy policy ({{msg-mw|welcomesurvey-privacy-policy-link-text}})\n* $2 - Name of the current user (for use with GENDER).",
 	"welcomesurvey-privacy-policy-link-text": "Text of the link to the privacy statement. Used inside a sentence.",
+	"welcomesurvey-privacy-footer-text": "Short paragraph displayed in the footer of the Welcome survey.",
 	"welcomesurvey-sidebar-editing-title": "Section heading before a brief blurb explaining how to start contributing on Wikipedia.",
 	"welcomesurvey-sidebar-editing-text": "Brief blurb explaining how to get started on editing. Appears after a section heading \"Getting started with editing\". After this blurb will be a couple of links to introduction and help pages like Help Desk and Tutorial pages.\n\nParameters:\n* $1 - Name of the current user (for use with GENDER).",
 	"welcomesurvey-sidebar-editing-link1-text": "Text of the first link in the getting started sidebar.",
