Welcome survey: Add generic user-research question
Why:
WMF Legal confirmed the research-specific privacy statement
doesn't need to be included in the Welcome survey, but it can
be included only in the "reaching out" email sent by whoever
runs the research study. As a result, we can include a generic
user-research question in the survey and use it for any user
research studies we need to get newcomers for.

What:
Add generic user-research question to the Welcome survey.

Bug: T342353
Bug: T343682
Change-Id: Ifb21f99d02a128ce54f5005f26a70c9ed0548178

--- a/i18n/welcomesurvey/qqq.json
+++ b/i18n/welcomesurvey/qqq.json
@@ -56,6 +56,8 @@
 	"welcomesurvey-question-languages-maximum": "Error messages shown below the languages field, shown in a welcome survey to new accounts. Displayed when the user has added the maximum number of languages and cannot add any more.",
 	"welcomesurvey-question-user-research-nonediting-label": "Checkbox label for the user research opt-in checkbox, shown in a welcome survey to new accounts.",
 	"welcomesurvey-question-user-research-nonediting-help": "Checkbox help text for user research opt-in checkbox, shown in a welcome survey to new accounts.",
+	"welcomesurvey-question-user-research-label": "Checkbox label for the user research opt-in checkbox, shown in a welcome survey to new accounts.",
+	"welcomesurvey-question-user-research-help": "Checkbox help text for user research opt-in checkbox, shown in a welcome survey to new accounts.",
 	"welcomesurvey-reminder": "Reminder shown to users on Special:Homepage if they have not filled out the welcome survey yet.\n\nParameters:\n* $1 - Link to the survey (({{msg-mw|welcomesurvey-reminder-link}}).",
 	"welcomesurvey-reminder-link": "Link to the welcome survey. Used in {{msg-mw|welcomesurvey-reminder}}.",
 	"welcomesurvey-reminder-dismiss": "Invisible button label (for accessibility purposes) for dismissing the welcome survey reminder on Special:Homepage.",
