--- a/i18n/welcomesurvey/en.json
+++ b/i18n/welcomesurvey/en.json
@@ -50,6 +50,8 @@
 	"welcomesurvey-question-languages-maximum": "{{GENDER:|You}} have added the maximum number of languages.",
 	"welcomesurvey-question-user-research-nonediting-label": "I want to be contacted via email about participating in user research",
 	"welcomesurvey-question-user-research-nonediting-help": "If {{GENDER:|you}} opt in, we may contact {{GENDER:|you}} in the future for research studies to improve our services. See [https://foundation.wikimedia.org/wiki/Legal:Non_Editing_Participation:_Looking_at_Examples_Survey_Privacy_Statement our privacy statement] for further details.",
+	"welcomesurvey-question-user-research-label": "I want to be contacted via email about participating in user research",
+	"welcomesurvey-question-user-research-help": "If {{GENDER:|you}} opt in, we may contact {{GENDER:|you}} in the future for research studies to improve our services.",
 	"welcomesurvey-reminder": "Help us improve {{GENDER:|your}} Wikipedia experience by answering a few optional questions in our Welcome Survey. $1",
 	"welcomesurvey-reminder-link": "Take the survey",
 	"welcomesurvey-reminder-dismiss": "Dismiss",
