Personalized praise: Add a custom post sent message
This consists of several parts:

 * MentorHooks::onBeforePageDisplay, which injects
   `ext.growthExperiments.MentorDashboard.PostEdit` when user is submitting
   the personalized praise message (as determined by `gepersonalizedpraise`
   query parameter).
 * A JS hook handler for `postEdit` that displays the post edit
   confirmation when instructed via the `wgGEMentorDashboardPersonalizedPraisePostEdit`
   JS config variable.
 * `wgPostEditConfirmationDisabled` JS config variable, which disables
   the default confirmation message (has to be set from PHP, mw.config.set
   is not working)

Bug: T322449
Change-Id: Ic2dc5a32437528a58a2314ab639247cf251f242f

--- a/i18n/mentorship/qqq.json
+++ b/i18n/mentorship/qqq.json
@@ -147,6 +147,7 @@
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-submit": "Submit button in the Skip mentee dialog in Personalized praise\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-skip-mentee-cancel": "Cancel button in the Skip mentee dialog in Personalized praise\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation-error-unknown": "Generic error message when sending appreciation fails.\n\n{{doc-growthexperiments-mentor-dashboard}}",
+	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation-success": "Success message when sending appreciation.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-cog-icon-label": "Label of the Personalized praise's cog icon, which opens the settings.\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-title": "Title of Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
 	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-headline": "Headline in Personalized praise's Settings module\n\n{{doc-growthexperiments-mentor-dashboard}}",
