--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -106,5 +106,12 @@
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "Help text for infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-delayed": "Help text for Special:EditGrowthConfig fields for which changes have a delayed effect due to caching or similar.\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-info-tooltip-close-label": "Accessibility label text for the close button in informational tooltips of the GrowthExperiments extension.\n\n{{doc-growthexperiments-homepage}}",
-	"specialpages-group-growth-tools": "{{doc-special-group|that=Provide tools for newcomers|like=[[Special:ClaimMentee]], [[Special:Homepage]], [[Special:MentorDashboard]], etc. Developed and supported by [[m:Growth|Growth team]].}}"
+	"specialpages-group-growth-tools": "{{doc-special-group|that=Provide tools for newcomers|like=[[Special:ClaimMentee]], [[Special:Homepage]], [[Special:MentorDashboard]], etc. Developed and supported by [[m:Growth|Growth team]].}}",
+	"growthexperiments-edit-config-level-up-notifications": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-level-up-notifications-description": "Description of levelling up notifications section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-try-suggested-edits-notification-title": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-try-suggested-edits-notification-description": "Description of trying suggested edits notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-keep-going-notification-title": "Subheader in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-edit-config-keep-going-notification-description": "Description of keep going notification section in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}"
+
 }
